MovieCard fade-in, prevented page from jump-scrolling on some page renders, and better lifecycle management to make 'similar movie' page visits work

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,7 +1,18 @@
 .movie-card {
+    min-height: 120px;
     max-width: 12rem;
+    opacity: 1;
+    animation-name: fadeInOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 1s;
 }
 
-.movie-card {
-    min-height: 120px;
+@keyframes fadeInOpacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
